# taxops-control-desk

./: .gitignore  README.md  TaxOpsControlDesk.spec  pyproject.toml
.ai/: CURRENT_STATE.md  DECISIONS.md  DESIGN.md  HANDOFF.md  RESOURCE_CLEANUP_AUDIT.md  TASKS.md  spec-kit.md  待改說明.md
build_tools/: __init__.py  check_resource_hygiene.py  clean_package.py  package_windows.py  pyinstaller_entry.py  smoke_test_exe.py
design-proto/: slice4-ui.html
docs/: implementation_spec.md  packaging_checklist.md  registry_cache_workflow.md  ui_action_contract.md
src/taxops/: __init__.py  __main__.py
tests/: conftest.py  test_attachments.py  test_audit_log.py  test_backup.py  test_clients.py  test_clients_bulk_parse.py  test_clients_page_smoke.py  test_date_field.py  test_dates.py  test_db_migrations.py  test_dialog_acceptance.py  test_document_requests.py  test_engagements.py  test_export_security.py  test_file_guard.py  test_fts5.py  test_generated_messages.py  test_i18n_labels.py  test_late_fee.py  test_packaging_tools.py  test_paths.py  test_recurring_billing.py  test_registry_bundle.py  test_registry_cache_ui.py  test_registry_error_guard.py  test_registry_importer.py  test_registry_lookup_in_new_client.py  test_registry_matcher.py  test_registry_parser.py  test_resource_cleanup.py  test_review_notes.py  test_settings_page_smoke.py  test_settings_persistence.py  test_single_instance.py  test_slice13_registry.py  test_slice14_dashboard.py  test_slice18b_ui.py  test_slice19a_navigation.py  test_slice19d_recurring_billing.py  test_slice20a_doc_requests_context.py  (+27 more)
(+133 files in other folders)
